--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -412,6 +412,7 @@ display: none;
     left: 0;
     top: 0;
     width: 100%;
+    /* background:linear-gradient(black,rgba(255, 60, 0, 0.5)); */
     background:linear-gradient(black,rgba(0,0,0,0.1));
     z-index: 1200;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, .1);
