--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,19 @@ body {
   }
 }
 
+#Karta {
+  z-index: 5000;
+  width: 100%;
+  height: 700px;
+  
+}
+
+#DivKarta {
+    border: solid black 3px;
+    width: 80%;
+    margin-left: 10%;
+
+}
 p {
   color: #333;
   line-height: 25px;
