--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3513,6 +3513,17 @@ page loader
   height: 80px;
 }
 
-
-
+.logo p {
+  padding-top: 9px;;
+/*   border: 1px #c2c03c solid;
+ */  /* border-radius: 10px; */
+  font-size: 1.8rem;
+  padding-bottom: 9px;
+  border-bottom: 2px yellow solid;
+  font-weight: 900;
+  padding-left: 20px;
+  color: rgb(238, 103, 50);
+  width: 235px;
+  /* background-color:rgba(236, 224, 49, 0.5); */
+}
 
