--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,4 @@
 /*============================================================
-Theme Name: Shiptar
-Version:        1.0.0
 =========================================================*/
 /*=======================================================
 TABLE OF CONTENTS:
@@ -1582,6 +1580,7 @@ mobile menu
 
 .team-single {
   margin-bottom: 30px;
+ 
 }
 
 .team-single:hover .team-img:before {
@@ -1676,6 +1675,8 @@ mobile menu
 }
 
 .team-content {
+  border-top: 5px solid #e5001d;
+
   text-align: center;
   padding: 30px 0;
   background: #f5f5f5;
@@ -2255,13 +2256,13 @@ page loader
 }
 
 .logo p {
-  padding-top: 9px;
+  padding-top: 9px; 
   /*   border: 1px #c2c03c solid;
  */
   /* border-radius: 10px; */
   font-size: 1.8rem;
   padding-bottom: 9px;
-  border-bottom: 2px rgb(238, 103, 50) solid;
+  border-bottom: 2px #e5001d solid;
   font-weight: 900;
   padding-left: 20px;
   color: yellow;
@@ -2400,16 +2401,15 @@ page loader
   background-position: -37px 104%;
   background-size: 120px;
   background-repeat: no-repeat;
-  box-shadow: 4px 4px 10px 3px rgba(0, 0, 0, .11);
+  box-shadow: 4px 4px 10px 3px rgba(0, 0, 0, 0.11);
 
-  transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s,
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s,
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
-
 }
-.aboniment_border:hover{
+.aboniment_border:hover {
   transform: translateY(-0.25rem);
-  box-shadow: rgba(46, 41, 51, 0.08) 0px 4px 8px
-        rgba(71, 63, 79, 0.16) 0px 8px 16px;
+  box-shadow: rgba(46, 41, 51, 0.08) 0px 4px 8px rgba(71, 63, 79, 0.16) 0px 8px
+    16px;
 }
 .aboniment_img2 {
   background-image: url("../images/5c1fc5cc35af3a036ed58b72_body-building.svg");
@@ -2430,7 +2430,7 @@ page loader
 
 .price {
   position: relative;
-    z-index: 1;
+  z-index: 1;
   color: #000;
   font-size: 30px;
   line-height: 30px;
