--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,7 +231,7 @@ a:focus {
   color: #31b5e1;
 }
 
-.header-top ul.login-r li + li:before {
+.header-top ul.login-r li+li:before {
   position: absolute;
   content: "or";
   left: -8px;
@@ -402,12 +402,12 @@ a:focus {
   left: 0px;
 }
 
-.main-menu nav ul li > ul li a {
+.main-menu nav ul li>ul li a {
   color: #333;
 }
 
-.main-menu nav ul li:hover > a,
-.main-menu nav ul li.active > a {
+.main-menu nav ul li:hover>a,
+.main-menu nav ul li.active>a {
   color: #c2c03c;
 }
 
@@ -431,7 +431,7 @@ a:focus {
   transition: all 0.3s ease 0s;
 }
 
-.main-menu nav > ul > li:hover > .submenu {
+.main-menu nav>ul>li:hover>.submenu {
   -webkit-transform: scaleY(1);
   -ms-transform: scaleY(1);
   -o-transform: scaleY(1);
@@ -575,7 +575,7 @@ mobile menu
   color: #fff;
 }
 
-.search ul li > ul {
+.search ul li>ul {
   position: absolute;
   right: 0;
   top: 150%;
@@ -589,29 +589,29 @@ mobile menu
   text-align: center;
 }
 
-.search ul li:hover > ul {
+.search ul li:hover>ul {
   visibility: visible;
   opacity: 1;
   top: 100%;
 }
 
-.search ul li > ul form {
+.search ul li>ul form {
   position: relative;
 }
 
-.search ul li > ul input {
+.search ul li>ul input {
   background: #fff;
   width: 100%;
   height: 40px;
   padding: 0 40px 0 10px;
 }
 
-.search ul li > ul input:focus {
+.search ul li>ul input:focus {
   outline: none;
   border: 1px solid #ccc;
 }
 
-.search ul li > ul button {
+.search ul li>ul button {
   position: absolute;
   right: 0;
   top: 0;
@@ -623,7 +623,7 @@ mobile menu
   cursor: pointer;
 }
 
-.search ul li > ul button:hover {
+.search ul li>ul button:hover {
   background: #31b5e1;
 }
 
@@ -742,13 +742,13 @@ mobile menu
   display: none;
 }
 
-.hero .hero-slider .slide-caption > h2,
-.hero .hero-slider .slide-caption > p,
-.hero .hero-slider .slide-caption > .btns {
+.hero .hero-slider .slide-caption>h2,
+.hero .hero-slider .slide-caption>p,
+.hero .hero-slider .slide-caption>.btns {
   opacity: 0;
 }
 
-.hero .hero-slider .slick-list .slick-current .slide-caption > p {
+.hero .hero-slider .slick-list .slick-current .slide-caption>p {
   -webkit-animation: fadeInTopSlow 1.5s 0.8s forwards;
   -moz-animation: fadeInTopSlow 1.5s 0.8s forwards;
   -o-animation: fadeInTopSlow 1.5s 0.8s forwards;
@@ -756,7 +756,7 @@ mobile menu
   animation: fadeInTopSlow 1.5s 0.8s forwards;
 }
 
-.hero .hero-slider .slick-list .slick-current .slide-caption > h2 {
+.hero .hero-slider .slick-list .slick-current .slide-caption>h2 {
   -webkit-animation: fadeInLeftSlow 1.5s 0.8s forwards;
   -moz-animation: fadeInLeftSlow 1.5s 0.8s forwards;
   -o-animation: fadeInLeftSlow 1.5s 0.8s forwards;
@@ -764,7 +764,7 @@ mobile menu
   animation: fadeInLeftSlow 1.5s 0.8s forwards;
 }
 
-.hero .hero-slider .slick-list .slick-current .slide-caption > .btns {
+.hero .hero-slider .slick-list .slick-current .slide-caption>.btns {
   -webkit-animation: fadeInBottomSlow 1.5s 0.8s forwards;
   -moz-animation: fadeInBottomSlow 1.5s 0.8s forwards;
   -o-animation: fadeInBottomSlow 1.5s 0.8s forwards;
@@ -799,6 +799,7 @@ mobile menu
 }
 
 @media (max-width: 450px) {
+
   .hero-style-1 .slide-caption h2,
   .hero-style-2 .slide-caption h2 {
     font-size: 30px;
@@ -811,6 +812,7 @@ mobile menu
 }
 
 @media (max-width: 450px) {
+
   .hero-style-1 .slide-caption h2 span,
   .hero-style-2 .slide-caption h2 span {
     padding: 4px 0;
@@ -977,6 +979,14 @@ mobile menu
   color: #333;
   padding-bottom: 20px;
   margin-bottom: 60px;
+  position: relative;
+}
+
+.section-title1 h2 {
+  font-size: 36px;
+  font-weight: 700;
+  color: #333;
+  padding-bottom: 30px;
   position: relative;
 }
 
@@ -1360,6 +1370,7 @@ mobile menu
 .pricing-area .flex {
   display: flex;
 }
+
 .price-item:hover {
   background: #e7f9ff;
 }
@@ -1580,7 +1591,6 @@ mobile menu
 
 .team-single {
   margin-bottom: 30px;
- 
 }
 
 .team-single:hover .team-img:before {
@@ -1888,10 +1898,66 @@ mobile menu
 1.6 footer-area start
 =========================================*/
 
-.footer {
+.map iframe {
+  padding: 50px;
+
+}
+
+.main {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.foot_text {
+  color: #000;
+  position: relative;
+  float: left;
+  min-height: 1px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+
+.foot_text_blog {
+  height: 30px;
+  margin-top: 0px;
+  padding-top: 5px;
+  padding-left: 34px;
+  background-image: url("../images/5c22beb835af3a2f8fd7b7ea_smartphone.svg");
+  background-position: 0px 0px;
+  background-size: 30px;
+  background-repeat: no-repeat;
+  font-weight: 700;
+  color: #000;
+}
+.foot_icon_2{
+  background-image: url('../images/5c22bffa1110ec1648fd2d1b_envelope.svg');
+  background-position: 0px 50%;
+  background-size: 25px;
+}
+.foot_icon_3{
+  background-image: url("../images/5c22c0214fdbba1813bc2151_placeholder.svg");
+  background-position: 0px 50%;
+  background-size: 25px;
+}
+.foot_icon_4{
+  background-image: url("../images/5c22c1044fdbbad5c6bc21e8_clock22.svg");
+  background-position: 0px 50%;
+  background-size: 25px;
+}
+.text_2 {
+  color: #000;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.footer {}
+
+.footer_1 {
   background-image: url("../images/block19.jpg");
   width: 100%;
-  height: 100vh;
 }
 
 .social li a {
@@ -2219,6 +2285,8 @@ page loader
 
 .img-container {
   transition: transform 0.1s ease;
+  box-shadow: rgba(46, 41, 51, 0.08) 0px 1px 2px,
+    rgba(71, 63, 79, 0.08) 0px 2px 4px;
 }
 
 .img-container:hover {
@@ -2241,11 +2309,6 @@ page loader
   opacity: 1;
 }
 
-.img_right {
-  margin-left: 5%;
-  margin-right: 5%;
-}
-
 .abc {
   margin-top: 2%;
 }
@@ -2256,7 +2319,7 @@ page loader
 }
 
 .logo p {
-  padding-top: 9px; 
+  padding-top: 9px;
   /*   border: 1px #c2c03c solid;
  */
   /* border-radius: 10px; */
@@ -2406,23 +2469,27 @@ page loader
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s,
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
+
 .aboniment_border:hover {
   transform: translateY(-0.25rem);
-  box-shadow: rgba(46, 41, 51, 0.08) 0px 4px 8px rgba(71, 63, 79, 0.16) 0px 8px
-    16px;
+  box-shadow: rgba(46, 41, 51, 0.08) 0px 4px 8px rgba(71, 63, 79, 0.16) 0px 8px 16px;
 }
+
 .aboniment_img2 {
   background-image: url("../images/5c1fc5cc35af3a036ed58b72_body-building.svg");
   background-size: 120px;
 }
+
 .aboniment_img3 {
   background-image: url("../images/5c1fccbd4fdbba34cdba2f0f_time-passing.svg");
   background-size: 120px;
 }
+
 .aboniment_img4 {
   background-image: url("../images/5c1fcde8753a4095111171e0_appointment20\(1\).png");
   background-size: 120px;
 }
+
 .aboniment_img5 {
   background-image: url("../images/5c1fcb271141052a58ff579c_clock.png");
   background-size: 120px;
@@ -2436,6 +2503,7 @@ page loader
   line-height: 30px;
   font-weight: 700;
 }
+
 .text_blog_p {
   position: relative;
   z-index: 1;
@@ -2444,6 +2512,7 @@ page loader
   line-height: 20px;
   font-weight: 100;
 }
+
 .shadow {
   position: absolute;
   right: -35px;
