Fixed bags with icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1905,6 +1905,9 @@ mobile menu
 .first_row:last-child{
   margin-top: 5em;  
 }
+/* .a{
+  margin-left: 2em;
+} */
 .foot{
   color: #000;
   min-height: 1px;
