--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1190,61 +1190,6 @@ mobile menu
   border-radius: 0px;
 }
 
-/*============================================
-0.9 features-area start
-==============================================*/
-.features-area {
-  position: relative;
-  padding: 100px 0 70px;
-}
-
-.fetures-img {
-  position: absolute;
-  left: 8%;
-  top: 14%;
-}
-
-.fetures-img img {
-  max-width: 100%;
-}
-
-.features-icon {
-  margin-bottom: 18px;
-}
-
-.features-icon.feature-icon3 {
-  margin-bottom: 10px;
-}
-
-.section-title2 h2:before {
-  left: 0;
-}
-
-.section-title2 h2 {
-  margin-bottom: 30px;
-}
-
-.features-text p {
-  padding-top: 10px;
-}
-
-.features-text h3 {
-  font-size: 25px;
-}
-
-.features-item .fi {
-  color: #c2c03c;
-}
-
-.features-icon2 {
-  transform: rotate(45deg);
-  display: inline-block;
-}
-
-.feature-wrap {
-  margin-bottom: 35px;
-}
-
 /*==========================================
 1.0 counter-area start
 ===========================================*/
@@ -1357,6 +1302,7 @@ mobile menu
   width: 100%;
   height: 100%;
   position: relative;
+  background-color: #FAFAFA;
 }
 
 .price-item {
@@ -1713,7 +1659,7 @@ mobile menu
 ==================================*/
 .blog-area {
   background: #f1f1f1;
-  padding: 100px 0 70px;
+  padding: 100px 0 40px;
   position: relative;
 }
 
@@ -1903,7 +1849,10 @@ mobile menu
 .first_row:last-child {
   margin-top: 5em;
 }
-
+.footer{
+  background-color: #F6F8F9;
+  padding-top: 4em;
+}
 .foot {
   color: #000;
   min-height: 1px;
@@ -1960,21 +1909,12 @@ mobile menu
 }
 .foot_last {
   margin-top: 3em;
-} /* 
-.footer_icons {
-  font-size: 3em;
-  margin-top: 0.3em;
+} 
+.foot_copy{
+  text-align: center;
+  padding: 2em;
+  background-color: #F6F8F9;
 }
-
-.footer_icons .fa:first-child {
-  color: rgb(59, 89, 152);
-}
-.footer_icons .fa:nth-child(2) {
-  color: rgb(251, 162, 66);
-}
-.footer_icons .fa:last-child {
-  color: rgb(100, 65, 164);
-} */
 .social li a {
   display: block;
   height: 45px;
@@ -2449,7 +2389,7 @@ page loader
 }
 
 .aboniment_border {
-  margin-top: 2em;
+  margin-top: 0.8em;
   width: 90%;
   position: relative;
   display: -webkit-box;
