--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1220,6 +1220,7 @@ mobile menu
 }
 
 .counter-content p {
+  font-size: 1.2em;
   color: #fff;
 }
 
@@ -1302,7 +1303,7 @@ mobile menu
   width: 100%;
   height: 100%;
   position: relative;
-  background-color: #FAFAFA;
+/*   background-color: #FAFAFA; */
 }
 
 .price-item {
@@ -1904,7 +1905,7 @@ mobile menu
 }
 
 .footer_icons .fa {
-  margin: 0.5em 0 0 0.5em;
+  margin: 0.5em 0 0 0.3em;
   font-size: 1.6em;
 }
 .foot_last {
