--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -903,7 +903,7 @@ mobile menu
   bottom: 0;
   width: 50px;
   height: 5px;
-  background: #c2c03c;
+  background: #e5001d;
 }
 
 .sec-p {
@@ -995,7 +995,7 @@ mobile menu
   bottom: 0;
   width: 60px;
   height: 3px;
-  background: #c2c03c;
+  background: #e5001d;
 }
 
 .service-single {
@@ -1055,7 +1055,7 @@ mobile menu
   top: -15px;
   font-family: Flaticon;
   font-size: 42px;
-  color: #c2c03c;
+  color: #e5001d;
 }
 
 .service-content2 h3:before {
@@ -1289,7 +1289,7 @@ mobile menu
   bottom: 0;
   width: 60px;
   height: 3px;
-  background: #c2c03c;
+  background: #e5001d;
 }
 
 /*====================================
