--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1848,6 +1848,7 @@ mobile menu
 }
 
 .contact {
+  margin-top: 10px;
   font-weight: 700;
   color: #000;
   text-align: center;
@@ -1901,6 +1902,7 @@ mobile menu
   text-align: center;
   padding: 2em;
   background-color: #F6F8F9;
+  margin-top: 1em;
 }
 .social li a {
   display: block;
@@ -2460,10 +2462,16 @@ page loader
   position: absolute;
   right: -35px;
   bottom: -60px;
-  width: 350px;
+  width: 400px;
   transform: rotate(-18deg);
   height: 150px;
   background-color: hsla(0, 0%, 94%, 0.5);
+}
+
+
+/* ScrollBar None */
+::-webkit-scrollbar { 
+  display: none; 
 }
 
 /*============================
