--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,6 @@ body {
   }
 }
 
-
 p {
   color: #333;
   line-height: 25px;
@@ -445,12 +444,15 @@ a:focus {
   top: 0;
   width: 100%;
   /* background: black; */
-  background: linear-gradient(black, rgba(0, 0, 0, 0.1));
+  background: linear-gradient(#4e4f47, rgba(0, 0, 0, 0.1));
   z-index: 1200;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
   animation: 600ms ease-in-out 0s normal none 1 running fadeInDown;
+}
+.sticky ul{
+  color: black;
 }
 
 /*====================
@@ -895,7 +897,7 @@ mobile menu
   background: #e5001d;
 }
 
-  /* .sec-p {
+/* .sec-p {
     padding-left: 30px;
   } */
 
@@ -1138,8 +1140,6 @@ mobile menu
   color: #fff;
 }
 
-
-
 .track-section .track form {
   position: relative;
 }
@@ -1184,6 +1184,7 @@ mobile menu
   background: url(../images/counter/2.jpg) no-repeat center top / cover;
   position: relative;
   background-attachment: fixed;
+  height: 100vh;
 }
 
 .counter-area:before {
@@ -1288,9 +1289,9 @@ mobile menu
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background-color: #F6F8F9;
+  background-color: #f6f8f9;
   position: relative;
-/*   background-color: #FAFAFA; */
+  /*   background-color: #FAFAFA; */
 }
 
 .price-item {
@@ -1837,9 +1838,9 @@ mobile menu
 .first_row:last-child {
   margin-top: 5em;
 }
-.footer{
-  background-color: #F6F8F9;
-  
+.footer {
+  background-color: #f6f8f9;
+
   padding-top: 4em;
 }
 .foot {
@@ -1899,11 +1900,11 @@ mobile menu
 }
 .foot_last {
   margin-top: 3em;
-} 
-.foot_copy{
+}
+.foot_copy {
   text-align: center;
   padding: 2em;
-  background-color: #F6F8F9;
+  background-color: #f6f8f9;
   margin-top: 1em;
 }
 .social li a {
@@ -2470,11 +2471,34 @@ page loader
   background-color: hsla(0, 0%, 94%, 0.5);
 }
 
-
-/* ScrollBar None */
-::-webkit-scrollbar { 
-  display: none; 
+/*============================
+SCROLLBAR
+=================================*/
+::-webkit-scrollbar {
+  display: none;
 }
+
+/*============================
+ENJOY SECTIONS
+=================================*/
+/* .enjoy {
+  background-image: url("../images/Last section/1-2.jpg");
+  width: 100%;
+  height: 400px;
+  padding: -2em;
+}
+.enjoy_1 {
+  background-image: url("../images/Last section/2-3.jpg");
+  width: 100%;
+  height: 400px;
+  padding: -2em;
+}
+.enjoy_2 {
+  background-image: url("../images/Last section/3.jpg");
+  width: 100%;
+  height: 400px;
+  padding: -2em;
+} */
 
 /*============================
 CHANGES FROM JUMA AREA
@@ -2519,3 +2543,7 @@ CHANGES FROM JUMA AREA
   margin-left: 56%;
   margin-top: -25%;
 }
+
+/* #images{
+  background-image: url('../images/')
+} */
