--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -451,7 +451,7 @@ a:focus {
   -webkit-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
   animation: 600ms ease-in-out 0s normal none 1 running fadeInDown;
 }
-.sticky ul{
+.sticky ul {
   color: black;
 }
 
@@ -1498,7 +1498,7 @@ mobile menu
 1.3 team-area start
 ============================================*/
 .team-area {
-  padding: 100px 0 70px;
+  padding: 100px 0 5px;
   background: #fff;
 }
 
@@ -1648,7 +1648,7 @@ mobile menu
 ==================================*/
 .blog-area {
   background: #f1f1f1;
-  padding: 100px 0 40px;
+  padding: 100px 0 60px;
   position: relative;
 }
 
@@ -1886,6 +1886,7 @@ mobile menu
   background-position: 0px 50%;
   background-size: 25px;
 }
+
 .text_2 {
   color: #000;
   margin-top: 5px;
@@ -1893,19 +1894,31 @@ mobile menu
   font-size: 18px;
   font-weight: 300;
 }
-
+.fab {
+  color: #000;
+}
 .footer_icons .fa {
+  margin: 0.7em 0 0 0.3em;
+  font-size: 1.6em;
+}
+.footer_icons .fab {
   margin: 0.5em 0 0 0.3em;
   font-size: 1.6em;
 }
+.footer_iconsf .fab {
+  margin-top: 0.1em;
+  font-size: 1.6em;
+}
+
 .foot_last {
   margin-top: 3em;
 }
 .foot_copy {
   text-align: center;
   padding: 2em;
-  background-color: #f6f8f9;
-  margin-top: 1em;
+  color: #fff;
+  background-color: #2c2c2c;
+  margin-top: 2em;
 }
 .social li a {
   display: block;
@@ -1939,6 +1952,7 @@ mobile menu
 =================================*/
 
 .blog-area.blog-style-2 {
+  padding-bottom: 100px;
   background: #fff;
 }
 
@@ -2280,42 +2294,6 @@ page loader
   /* background-color:rgba(236, 224, 49, 0.5); */
 }
 
-.multiple-items .slick-prev,
-.multiple-items .slick-next {
-  width: 60px;
-  height: 60px;
-  border: 1px solid #959595;
-  border-radius: 5px;
-  z-index: 10;
-  border-radius: 60px;
-  transition: all 0.3s;
-}
-
-.multiple-items .slick-prev:before {
-  font-family: "FontAwesome";
-  content: "\f104";
-  opacity: 1;
-  color: #777;
-}
-
-.multiple-items .slick-next:before {
-  font-family: "FontAwesome";
-  content: "\f105";
-  opacity: 1;
-  color: #777;
-}
-
-.multiple-items .slick-prev:hover,
-.multiple-items .slick-next:hover {
-  background: #c2c03c;
-  border: none;
-}
-
-.multiple-items .slick-prev:hover:before,
-.multiple-items .slick-next:hover:before {
-  color: #fff;
-}
-
 /* Slick Slider  */
 
 .square {
@@ -2348,6 +2326,49 @@ page loader
   text-overflow: ellipsis;
   display: block;
   font-size: 0.9em;
+}
+
+.multiple-items .slick-prev,
+.multiple-items .slick-next {
+  width: 60px;
+  height: 60px;
+  border: 1px solid #959595;
+  border-radius: 5px;
+  z-index: 10;
+  border-radius: 60px;
+  transition: all 0.3s;
+
+  box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.2);
+}
+.multiple-items .slick-prev::after,
+.multiple-items .slick-next::after {
+  content: "";
+  box-shadow: 0 0 0px rgba(0, 0, 0, 0.2), inset 0 0 0px rgba(0, 0, 0, 0.2);
+}
+
+.multiple-items .slick-prev:before {
+  font-family: "FontAwesome";
+  content: "\f104";
+  opacity: 1;
+  color: #fff;
+}
+
+.multiple-items .slick-next:before {
+  font-family: "FontAwesome";
+  content: "\f105";
+  opacity: 1;
+  color: #fff;
+}
+
+.multiple-items .slick-prev,
+.multiple-items .slick-next {
+  background: #c2c03c;
+  border: none;
+}
+
+.multiple-items .slick-prev:hover:before,
+.multiple-items .slick-next:hover:before {
+  color: #fff;
 }
 
 /* End Of Slick Slider */
@@ -2474,31 +2495,14 @@ page loader
 /*============================
 SCROLLBAR
 =================================*/
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
-}
+} */
 
 /*============================
 ENJOY SECTIONS
 =================================*/
-/* .enjoy {
-  background-image: url("../images/Last section/1-2.jpg");
-  width: 100%;
-  height: 400px;
-  padding: -2em;
-}
-.enjoy_1 {
-  background-image: url("../images/Last section/2-3.jpg");
-  width: 100%;
-  height: 400px;
-  padding: -2em;
-}
-.enjoy_2 {
-  background-image: url("../images/Last section/3.jpg");
-  width: 100%;
-  height: 400px;
-  padding: -2em;
-} */
+
 
 /*============================
 CHANGES FROM JUMA AREA
