--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1282,6 +1282,7 @@ mobile menu
 /*====================================
 1.1 pricing-area start
 ======================================*/
+
 .pricing-area {
   padding-top: 170px;
   display: flex;
@@ -1766,67 +1767,12 @@ mobile menu
 }
 
 /*==========================================
-1.5 newsletter-area start
+1.5 features-area start
 ===========================================*/
-.newsletter-section {
-  background: #f5f5f5;
+.features-area {
+  padding: 80px 0 150px 0 ; 
+  background-color: #f6f8f9;
 }
-
-.newsletter-section h2 {
-  font-size: 25px;
-  font-weight: 700;
-  color: #333;
-  margin-bottom: 20px;
-}
-
-.newsletter-section {
-  background: #fff;
-  padding: 70px 0;
-}
-
-.newsletter {
-  padding-top: 33px;
-}
-
-.newsletter-section .newsletter form {
-  display: inline-block;
-  width: 105%;
-}
-
-.newsletter-section .newsletter button {
-  background: #c2c03c;
-  color: #fff;
-  border: 0;
-  outline: 0;
-  left: 0;
-  top: 0;
-  height: 50px;
-  padding: 0px 35px;
-  transition: all 0.3s;
-}
-
-.newsletter-section .newsletter button:hover {
-  background: #31b5e1;
-}
-
-.newsletter-section .newsletter input {
-  background: #fff;
-  height: 50px;
-  font-size: 17px;
-  color: #333;
-  border: 1px solid #ddd;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
-
-.col-r {
-  max-width: 275px;
-}
-
-.form-control {
-  border-radius: 1px;
-}
-
 /*=======================================
 1.6 footer-area start
 =========================================*/
@@ -1842,6 +1788,7 @@ mobile menu
   background-color: #f6f8f9;
 
   padding-top: 4em;
+  padding-bottom: 2em;
 }
 .foot {
   color: #000;
@@ -1918,7 +1865,7 @@ mobile menu
   padding: 2em;
   color: #fff;
   background-color: #2c2c2c;
-  margin-top: 2em;
+  /* margin-top: 2em; */
 }
 .social li a {
   display: block;
@@ -2503,7 +2450,6 @@ SCROLLBAR
 ENJOY SECTIONS
 =================================*/
 
-
 /*============================
 CHANGES FROM JUMA AREA
 =================================*/
@@ -2548,6 +2494,6 @@ CHANGES FROM JUMA AREA
   margin-top: -25%;
 }
 
-/* #images{
-  background-image: url('../images/')
-} */
+ #images{
+  padding-bottom: 100px;
+}
