--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,7 +410,7 @@ span .main-menu nav ul li a:before {
   bottom: 0;
   width: 100%;
   height: 2px;
-  background: #fff;
+  background: #000;
   opacity: 0;
   transition: all 0.5s;
 }
@@ -2282,8 +2282,8 @@ page loader
   border-bottom: 2px #e5001d solid;
   font-weight: 900;
   padding-left: 20px;
-  color: yellow;
   width: 235px;
+  color: yellow;
   /* background-color:rgba(236, 224, 49, 0.5); */
 }
 .logo_1 p {
