--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -492,7 +492,8 @@ span .main-menu .submenu {
   left: 0;
   top: 0;
   width: 100%;
-  /* background: black; */
+    /* background: #fff; */
+
   background: linear-gradient(#4e4f47, rgba(0, 0, 0, 0.1));
   z-index: 1200;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
@@ -1665,8 +1666,6 @@ mobile menu
 }
 
 .team-content {
-  border-top: 5px solid #e5001d;
-
   text-align: center;
   padding: 30px 0;
   background: #f5f5f5;
@@ -2378,11 +2377,11 @@ page loader
   background: #c2c03c;
   border: none;
 }
-
-.multiple-items .slick-prev:hover:before,
-.multiple-items .slick-next:hover:before {
-  color: #fff;
-}
+/* 
+  .multiple-items .slick-prev:hover,
+  .multiple-items .slick-next:hover {
+    transform: scale(0.5);
+  } */
 
 /* End Of Slick Slider */
 
@@ -2516,10 +2515,10 @@ SCROLLBAR
   display: none;
 } */
 
-.about_product{
+.about_product {
   line-height: 1.4;
   font-weight: 400;
-  font-size: .9rem;
+  font-size: 0.9rem;
   color: #212529;
   margin-left: 1.4em;
   margin-top: 0.7em;
