--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -700,6 +700,8 @@ mobile menu
 .slide-caption {
   z-index: 19;
   padding-bottom: 45px;
+  padding-left: 4em;
+
 }
 
 .hero .slide {
@@ -2337,7 +2339,7 @@ page loader
 }
 .slick_img img {
   width: 100%;
-  height: 180px;
+  height: 220px;
 }
 
 .multiple-items .slick-prev,
