--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -492,9 +492,8 @@ span .main-menu .submenu {
   left: 0;
   top: 0;
   width: 100%;
-    /* background: #fff; */
-
-  background: linear-gradient(#4e4f47, rgba(0, 0, 0, 0.1));
+ /*  background: #333333; */
+  background: linear-gradient(#333333, rgba(0, 0, 0, 0.1));
   z-index: 1200;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
@@ -701,7 +700,6 @@ mobile menu
   z-index: 19;
   padding-bottom: 45px;
   padding-left: 4em;
-
 }
 
 .hero .slide {
