--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1801,6 +1801,7 @@ mobile menu
   -ms-transition: all 0.5s;
   transition: all 0.5s;
   width: 100%;
+  height: 400px;
 }
 
 .blog-item:hover .blog-img img {
