--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -492,6 +492,7 @@ span .main-menu .submenu {
   left: 0;
   top: 0;
   width: 100%;
+  height: 80px;
  /*  background: #333333; */
   background: linear-gradient(#333333, rgba(0, 0, 0, 0.1));
   z-index: 1200;
