--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1586,6 +1586,8 @@ mobile menu
   transition: all 0.3s;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
+  height: 400px;
+  width: 100%;
 }
 
 .team-single:hover .team-img img {
